--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "abbott blog",
   "main": "index.js",
-  "repository": "https://github.com/alexwjj/alexwjj.github.io",
+  "repository": "https://github.com/ljp1126/abbott.github.io.git",
   "author": "elijpe",
   "license": "MIT",
   "scripts": {
@@ -13,6 +13,18 @@
     "start": "nodemon --ext md,vue --watch .vuepress --watch . --exec vuepress dev docs"
   },
   "devDependencies": {
-    "vuepress": "^1.8.2"
+    "@vuepress-reco/vuepress-plugin-bulletin-popover": "^1.5.7",
+    "@vuepress/plugin-medium-zoom": "^1.8.2",
+    "@vuepress/plugin-pwa": "^1.8.2",
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-flowchart": "^1.4.3",
+    "vuepress-theme-reco": "^1.6.6"
+  },
+  "dependencies": {
+    "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
+    "@vuepress-reco/vuepress-plugin-loading-page": "^1.6.0",
+    "nodemon": "^2.0.7",
+    "vuepress-plugin-cursor-effects": "^1.0.2",
+    "vuepress-plugin-dynamic-title": "^1.0.0"
   }
 }
