--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@vuepress/plugin-pwa": "^1.8.2",
     "vuepress": "^1.8.2",
     "vuepress-plugin-flowchart": "^1.4.3",
-    "vuepress-theme-reco": "^1.6.6"
+    "vuepress-theme-reco": "1.6.1"
   },
   "dependencies": {
     "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
