--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
 script:
     - yarn build
 after_success:
-    - cd public
+    - cd docs/.vuepress/dist
     - git init
     - git config --global user.name "${U_NAME}"
     - git config --global user.email "${U_EMAIL}"
